--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,9 +1,28 @@
-cmake_minimum_required (VERSION 3.0)
-project(example)
-
-add_executable(replace-me source.cpp)
-
-find_package(sleepy-discord CONFIG REQUIRED)
-
-add_subdirectory(deps/sleepy-discord)
-target_link_libraries(replace-me sleepy-discord)
+# minimum CMake version required
+cmake_minimum_required(VERSION 3.15)
+# Project name, version and description
+project(discord-bot VERSION 1.0 DESCRIPTION "A discord bot")
+ 
+# Add DPP as dependency
+add_subdirectory(libs/DPP)
+# You can also add any other libs you want to use
+ 
+add_executable(${PROJECT_NAME}
+    src/bot.cpp
+)
+ 
+# Linking libraries
+target_link_libraries(${PROJECT_NAME}
+    dpp
+)
+ 
+# Specify includes
+target_include_directories(${PROJECT_NAME} PRIVATE
+    libs/DPP/include
+)
+ 
+# Set C++ version
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
+)
